Bug 1719108. Check in a few places in imagelib if it's too late in shutdown to dispatch runnables. r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D119712